# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml
aoc2022/: __main__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day14.py  helpers.py
tests/: test_aoc2022.py
