[tool.poetry]
name = "Adevent of Code 2022"
version = "0.1.0"
description = "Solutions to Advent of Code 2022 problems"
authors = ["Gareth Rogers <gareth.j.rogers@gmail.com>"]
readme = "README.md"
packages = [
  { include = "aoc2022" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.7.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
isort = "^5.0.0"
black = "^22.10.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc2022 = "aoc2022.__main__:main"